       visible (LP: #921073).
  * debian/control: Added explicit build dependency on libfontconfig1-dev.
    (Closes: #661127)

  [ Martin Pitt ]
  * debian/control: Build against libpng-dev, with an alternative to the older
    libpng12-dev. (Closes: #662295)
  * debian/control: Prefer building against libtiff5-dev if available, falling  
    back to libtiff-dev.

 -- Till Kamppeter <till.kamppeter@gmail.com>  Thu,  1 Mar 2012 18:35:51 +0100

cups-filters (1.0.2-1) unstable; urgency=low

  [ Till Kamppeter ]
  * New upstream release
     - cups-filters 1.0.2 release
     - bannertopdf fixes
  * debian/local/default-testpage.pdf, debian/source/include-binaries: Added
    Ubuntu-branded test page template.
  * debian/rules: Replace the upstream test page template by the Ubuntu-branded
    one if the package is built under Ubuntu.

  [ Martin Pitt ]
  * debian/control: Build-depend on libpoppler-private-dev for the impending
    poppler 0.18 transition. Thanks Pino Toscano! (Closes: #660989)

 -- Martin Pitt <mpitt@debian.org>  Thu, 23 Feb 2012 14:48:00 +0100

cups-filters (1.0.1-1) unstable; urgency=low

  * New upstream release
     - cups-filters 1.0.1 release
     - Included the textonly filter, Red Hat's driver for text-only printers.
     - Install sample PPD file for pdftoijs (for HP PhotoSmart Pro B8300).
     - Added cupsfilters.drv, providing support for the HP DesignJet 600,
       750C, 1050C, 4000, T1100, T790.
     - Added texttops and imagetops filters for backward compatibility
       (Closes: #658258).
     - Use Ghostscript as default renderer when building pdftops (LP: #926068).
     - Build system and documentation fixes
     - Incorporated distro patches upstream: Cost factor 100 for pdftoraster,
       installation of C headers, PDF filter documentation
  * debian/local/text*, debian/local/README.pdf-filters: Removed, incorporated
    upstream.
  * debian/cups-filters.ppd-updater: Updated appropriate to changes in the
    upstream package.