@@ -12,7 +12,7 @@ Build-Depends:
  autotools-dev,
  cdbs (>= 0.4.93~),
  debhelper (>= 9~),
- hardening-wrapper,
+ dpkg-dev (>= 1.16.1~),
  patch,
  pkg-config,
  sharutils,
