@@ -9,7 +9,10 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-export DEB_BUILD_HARDENING=1
+DPKG_EXPORT_BUILDFLAGS=1
+include /usr/share/dpkg/buildflags.mk
+LDFLAGS += -Wl,--as-needed
+
 # http://www.cups.org/str.php?L3765
 export LC_MESSAGES=C
 
@@ -23,7 +26,6 @@ DEB_INSTALL_CHANGELOGS_ALL := CHANGES.txt
 
 #DEB_DH_STRIP_ARGS := --dbg-package=cups-filters-dbg
 DEB_DH_INSTALL_SOURCEDIR := debian/tmp
-LDFLAGS := -Wl,--as-needed
 DPKG_GENSYMBOLS_CHECK_LEVEL=4
 export DPKG_GENSYMBOLS_CHECK_LEVEL
 
