@@ -15,6 +15,8 @@ cups-filters (1.0.3-1) UNRELEASED; urgency=low
     libpng12-dev. (Closes: #662295)
   * debian/control: Prefer building against libtiff5-dev if available, falling  
     back to libtiff-dev.
+  * debian/control, debian/rules: Move from hardening-wrapper to using
+    dpkg-buildflags. Bump dpkg-dev build dependency to (>= 1.16.1~) for this.
 
  -- Till Kamppeter <till.kamppeter@gmail.com>  Thu,  1 Mar 2012 18:35:51 +0100
 
